--- a/League.Demo/Views/Home/AboutLeague.de.cshtml
+++ b/League.Demo/Views/Home/AboutLeague.de.cshtml
@@ -1,7 +1,8 @@
-﻿@using League.Controllers
-@using League.Helpers
+﻿@using League.Helpers
 @using League.Routing
-@using League.TagHelpers
+@using League.WebApp
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using System.Reflection
 @{
     ViewData.Title("Über Volleyball-Liga");
 }
@@ -32,7 +33,7 @@
             </ul>
         </article>
         <article class="col-2 col-sm-4">
-            <img class="img-fluid rounded text-end" src="/images/logo-volleyball-league.svg" alt="League">
+            <img class="img-fluid rounded text-right" src="/images/logo-volleyball-league.svg" alt="League">
         </article>
     </div>
     <div class="row">
@@ -48,22 +49,23 @@
             </ul>
         </article>
         <article class="col-2 col-sm-4">
-            <img class="img-fluid rounded text-end" src="/images/software.png" alt="League">
+            <img class="img-fluid rounded text-right" src="/images/software.png" alt="League">
         </article>
     </div>
     <div class="row mb-4">
         <article class="col-8">
-            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.GeneralContact" class="link fw-bolder">Kontaktiere uns</a> um eine Liga mit dieser Plattform zu organisieren.</div>
+            <div class="p-2 border rounded border-success"><a asp-route="@RouteNames.GeneralContact" class="link font-weight-bolder">Kontaktiere uns</a> um eine Liga mit dieser Plattform zu organisieren.</div>
         </article>
     </div>
     <div class="row">
         <article class="col-8">
             @{
-                var leagueAssembly = System.Reflection.Assembly.GetAssembly(typeof(League.LeagueStartup))?.GetName();
-                var tmAssembly = System.Reflection.Assembly.GetAssembly(typeof(TournamentManager.DateTimePeriod))?.GetName();
-                if (leagueAssembly != null && tmAssembly != null)
+                var webAppInfo = new Axuno.Tools.AssemblyInfo(typeof(WebAppStartup));
+                var leagueInfo = new Axuno.Tools.AssemblyInfo(typeof(LeagueStartup));
+                var tmInfo = new Axuno.Tools.AssemblyInfo(typeof(TournamentManager.MultiTenancy.AppDb));
+                if (webAppInfo.Name != null && leagueInfo.Version != null && tmInfo.Name != null && tmInfo.Version != null)
                 {
-                    <div>Eingesetzt: @leagueAssembly.Name v@(leagueAssembly.Version) und @tmAssembly.Name v@(tmAssembly.Version)</div>
+                    <div>Im Einsatz: @(webAppInfo.Product) v@(webAppInfo.Version), @(leagueInfo.Name) v@(leagueInfo.Version) und @(tmInfo.Name) v@(tmInfo.Version)</div>
                 }
             }
         </article>
@@ -72,7 +74,7 @@
 @section styles {
     <style type="text/css">
         .h3 {
-            background: linear-gradient(to right, #018dff 10%, #01df02 100%);
+            background: linear-gradient(to right, var(--bs-primary) 10%, var(--bs-success) 100%);
             color: white;
         }
     </style>
