--- a/League.Demo/Views/Shared/_Layout.cshtml
+++ b/League.Demo/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
     </header>
     <nav id="nav-main" class="navbar navbar-expand-md navbar-dark rounded ps-2 site-sticky-top">
         @* bootstrap class "sticky-top" interferes with modal, that's why we use our identical "site-sticky-top" *@
-        <div class="container-fluid">
+        <div class="container-fluid ps-0">
             @* <a class="navbar-brand" href="#">axuno</a>*@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu-items" aria-controls="navbar-menu-items" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
