--- a/League/Views/TeamApplication/EditVenue.cshtml
+++ b/League/Views/TeamApplication/EditVenue.cshtml
@@ -51,7 +51,7 @@
                         <div>@Localizer["Changes will have effect for the following teams using this venue"]:</div>
                         @foreach (var teamName in Model.TeamsUsingTheVenue)
                         {
-                            <span class="badge badge-secondary d-inline-block me-2">@teamName</span>
+                            <span class="badge bg-secondary d-inline-block me-2">@teamName</span>
                         }
                     </div>
                 </div>
