--- a/League/Views/TeamApplication/SelectTeam.cshtml
+++ b/League/Views/TeamApplication/SelectTeam.cshtml
@@ -17,7 +17,7 @@
         <site-validation-summary show="All" unique-error-text="true"></site-validation-summary>
         <div class="row">
             <div class="mb-3 col-12 col-md-8">
-                <label asp-for="SelectedTeamId" class="d-block mt-0 form-label"></label>
+                <label asp-for="SelectedTeamId" class="d-block form-label"></label>
                 <div class="table-responsive-sm">
                     @* Wrapping this way make tables responsive and 100% width *@
                     <table class="table table-sm table-light mb-0">
@@ -46,7 +46,7 @@
         </div>
         <div class="row">
             <div class="mb-3 col-12 col-md-6">
-                <label class="mt-0 form-label">@Localizer["The team has never participated before"]</label>
+                <label class="form-label">@Localizer["The team has never participated before"]</label>
                 <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditTeam)" asp-route-tenant="@tenantUrlSegment" asp-route-isnew="true" class="btn btn-primary">@Localizer["Create a new team"]</a>
             </div>
         </div>
