--- a/League/Styles/site/_std-input.scss
+++ b/League/Styles/site/_std-input.scss
@@ -59,19 +59,14 @@
 * START: Override Bootstrap
 **************************************************************/
 
-.form-control {
-    font-size: 1.25rem;
-    padding: 0.25rem 0.5rem;
-}
-
 label {
-    //font-size: 1rem;
     font-weight: normal;
     color: $success;
     background-color: transparent;
-    margin-top: .75rem;
-    margin-bottom: 0rem;
-    display: block;
+}
+
+.form-control, .form-select {
+    font-size: 1.25rem;
 }
 
 /**************************************************************
