--- a/League/Styles/site/site.scss
+++ b/League/Styles/site/site.scss
@@ -5,12 +5,25 @@
 $body-width: 60rem;
 
 body {
+    background-color: $gray-500; /* override $body-bg for just this element */
+}
+
+.form-select:focus {
+    background-color: $input-focus-bg !important;
+}
+
+// Tables
+.table, .table-light {
+    $table-bg: transparent;
+}
+
+body {
     max-width: $body-width;
     margin: 0 auto;
 
     header.site, footer.site {
         margin-top: .3rem;
-        background-color: #e9e9e9;
+        background-color: $gray-200;
     }
 
     header.site {
@@ -101,7 +114,7 @@ a.link:before {
 hr {
     height: 0;
     border: 0;
-    border-top: 0.1rem solid $success;
+    border-top: 0.15rem solid $success;
 }
 
 .hr-text {
@@ -113,7 +126,7 @@ hr {
     color: black;
     text-align: center;
     height: 1.5em;
-    //opacity: .5;
+    opacity: 1;
     &:before {
         content: '';
         // use the linear-gradient for the fading effect
@@ -124,7 +137,7 @@ hr {
         left: 0;
         top: 50%;
         width: 100%;
-        height: 1px;
+        height: 2px;
     }
 
     &:after {
