--- a/League/Styles/tempusdominus-bootstrap-4/tempusdominus-custom.scss
+++ b/League/Styles/tempusdominus-bootstrap-4/tempusdominus-custom.scss
@@ -1,9 +1,8 @@
 // Import bootstrap variables including default color palette and fonts
-@import "node_modules/bootstrap/scss/functions";
-@import "node_modules/bootstrap/scss/variables";
+@import "../bootstrap/_custom.scss";
 
 $bs-datetimepicker-timepicker-font-size: 1.2em !default;
-$bs-datetimepicker-active-bg: theme-color('primary') !default;
+$bs-datetimepicker-active-bg: $primary !default;
 $bs-datetimepicker-active-color: $white !default;
 $bs-datetimepicker-border-radius: $border-radius !default;
 $bs-datetimepicker-btn-hover-bg: $gray-200 !default;
