--- a/League/Views/Manage/Index.cshtml
+++ b/League/Views/Manage/Index.cshtml
@@ -19,13 +19,13 @@
 <partial name="@League.Views.ViewNames.Manage._IndexMessagesPartial" model="@Model.ManageMessage" />
 <div class="mb-0 pb-1">
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<ChangeUsernameViewModel>(nameof(ChangeUsernameViewModel.Username)))</li>
-        <li class="list-inline-item col-md-7">@(User.Identity?.Name)</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@(TenantLink.Action(nameof(Manage.ChangeUserName), nameof(Manage)))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item text-success col-12 col-md-3">@(Metadata.GetDisplayName<ChangeUsernameViewModel>(nameof(ChangeUsernameViewModel.Username)))</li>
+        <li class="list-inline-item col-12 col-md-7">@(User.Identity?.Name)</li>
+        <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@(TenantLink.Action(nameof(Manage.ChangeUserName), nameof(Manage)))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<RegisterViewModel>(nameof(RegisterViewModel.Password)))</li>
-        <li class="list-inline-item col-md-7">
+        <li class="list-inline-item text-success col-12 col-md-3">@(Metadata.GetDisplayName<RegisterViewModel>(nameof(RegisterViewModel.Password)))</li>
+        <li class="list-inline-item col-12 col-md-7">
             @if (Model.HasPassword)
             {
                 <span class="fas fa-ellipsis-h"></span><span class="fas fa-ellipsis-h"></span><span class="fas fa-ellipsis-h"></span>
@@ -35,7 +35,7 @@
                 <span>@Localizer["[Not set]"]</span>
             }
         </li>
-        <li class="list-inline-item col-md-auto">
+        <li class="list-inline-item col-12 col-md-auto">
             @if (Model.HasPassword)
             {
                 <button type="button" site-toggle-modal-ajax site-data-url="@(TenantLink.Action(nameof(Manage.ChangePassword), nameof(Manage)))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button>
@@ -47,33 +47,33 @@
         </li>
     </ul>
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@Localizer["Personal Details"]</li>
-        <li class="list-inline-item col-md-7">@Model.ApplicationUser!.CompleteName</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPersonalDetails), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item text-success col-12 col-md-3">@Localizer["Personal Details"]</li>
+        <li class="list-inline-item col-12 col-md-7">@Model.ApplicationUser!.CompleteName</li>
+        <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPersonalDetails), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<ChangeEmailViewModel>(nameof(ChangeEmailViewModel.Email)))</li>
-        <li class="list-inline-item col-md-7">@Model.ApplicationUser.Email</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.ChangeEmail), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item text-success col-12 col-md-3">@(Metadata.GetDisplayName<ChangeEmailViewModel>(nameof(ChangeEmailViewModel.Email)))</li>
+        <li class="list-inline-item col-12 col-md-7">@Model.ApplicationUser.Email</li>
+        <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.ChangeEmail), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditEmail2ViewModel>(nameof(EditEmail2ViewModel.Email2)))</li>
-        <li class="list-inline-item col-md-7">@(Model.ApplicationUser.Email2 ?? Localizer["[Not set]"].Value)</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditEmail2), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item text-success col-12 col-md-3">@(Metadata.GetDisplayName<EditEmail2ViewModel>(nameof(EditEmail2ViewModel.Email2)))</li>
+        <li class="list-inline-item col-12 col-md-7">@(string.IsNullOrEmpty(Model.ApplicationUser.Email2) ? Localizer["[Not set]"].Value : Model.ApplicationUser.Email2)</li>
+        <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditEmail2), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditPhoneViewModel>(nameof(EditPhoneViewModel.PhoneNumber)))</li>
-        <li class="list-inline-item col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber)</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPhoneNumber), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-12 text-success col-md-3">@(Metadata.GetDisplayName<EditPhoneViewModel>(nameof(EditPhoneViewModel.PhoneNumber)))</li>
+        <li class="list-inline-item col-12 col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber)</li>
+        <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPhoneNumber), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditPhone2ViewModel>(nameof(EditPhone2ViewModel.PhoneNumber2)))</li>
-        <li class="list-inline-item col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber2) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber2)</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPhoneNumber2), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-12 text-success col-md-3">@(Metadata.GetDisplayName<EditPhone2ViewModel>(nameof(EditPhone2ViewModel.PhoneNumber2)))</li>
+        <li class="list-inline-item col-12 col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber2) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber2)</li>
+        <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.EditPhoneNumber2), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@Localizer["Linked Social Logins"]</li>
-        <li class="list-inline-item col-md-7">
+        <li class="list-inline-item col-12 text-success col-md-3">@Localizer["Linked Social Logins"]</li>
+        <li class="list-inline-item col-12 col-md-7">
             @{
                 if (Model.Logins.Count == 0)
                 {
@@ -85,13 +85,13 @@
                 }
             }
         </li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.ManageLogins), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.ManageLogins), nameof(Manage))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <h4 class="text-danger">@Localizer["Danger Zone"]</h4>
     <ul class="list-inline g-0">
-        <li class="list-inline-item text-success col-md-3">@Localizer["Delete Account"]</li>
-        <li class="list-inline-item col-md-7">@Localizer["Caution: Once the account is deleted, this is final."]</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.DeleteAccount), nameof(Manage))" class="btn btn-sm btn-outline-danger">@Localizer["Delete"]</button></li>
+        <li class="list-inline-item text-success col-12 col-md-3">@Localizer["Delete Account"]</li>
+        <li class="list-inline-item col-12 col-md-7">@Localizer["Caution: Once the account is deleted, this is final."]</li>
+        <li class="list-inline-item col-12 col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@TenantLink.Action(nameof(Manage.DeleteAccount), nameof(Manage))" class="btn btn-sm btn-outline-danger">@Localizer["Delete"]</button></li>
     </ul>
     <div class="text-muted">
         @{ var zonedTime = Model.TimeZoneConverter.ToZonedTime(Model.ApplicationUser.ModifiedOn)!;}
