--- a/League/Views/TeamApplication/List.cshtml
+++ b/League/Views/TeamApplication/List.cshtml
@@ -13,7 +13,7 @@
 }
     <div class="mb-0 pb-1">
         <h2 class="h2">@ViewData["Title"]</h2>
-        <hr class="mb-2" />
+        <hr class="mb-" />
         <partial name="@nameof(League.Views.ViewNames.TeamApplication._TeamApplicationMessagesPartial)" />
         @if (TenantContext.TournamentContext.ApplicationAllowed)
         {
@@ -45,7 +45,7 @@
                 <tbody>
                     @foreach (var round in Model.TournamentRoundTeams.OrderBy(r => r.RoundName).ToList().Select(r => (Id: r.RoundId, RoundDescription: r.RoundDescription, RoundTypeDescription: r.RoundTypeDescription)).Distinct())
                     {
-                        <tr><td colspan="3"><h4 class="d-inline-block"><span class="badge badge-dark">@round.RoundDescription</span></h4><span class="text-muted small ms-3">@round.RoundTypeDescription</span></td></tr>
+                        <tr><td colspan="3"><h4 class="d-inline-block"><span class="badge bg-dark">@round.RoundDescription</span></h4><span class="text-muted small ms-3">@round.RoundTypeDescription</span></td></tr>
                         foreach (var rt in Model.TournamentRoundTeams.Where(r => r.RoundId == round.Id).OrderBy(r => r.TeamName))
                         {
                             <tr><td>@rt.TeamName</td><td>@rt.TeamClubName</td><td class="text-end">@(ZonedTimeString(rt.TeamId))</td></tr>
